kube/web-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cort
  name: react-vite-app
  labels:
    app: react-vite-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: react-vite-app
  template:
    metadata:
      labels: 
        app: react-vite-app
    spec:
      containers:
      - name: react-vite-container
        image: cortlynd101/cort-final:${IMAGE_TAG}
        ports:
        - containerPort: 80
