kube/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react-vite-app-service
  namespace: cort
spec:
  selector:
    app: react-vite-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
