kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-vite-app-ingress
  namespace: cort
spec:
  rules:
  - host: cort-react.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-vite-app-service
            port:
              number: 80
